# PathwaysGenerator

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  adaptation_pathways.spec.in  pyproject.toml  tox.ini
.github/workflows/: analyse.yml  deploy.yml  test.yml  web_app.yml
datasets/: test-dataset.apw
documentation/: CMakeLists.txt  _config.yml.in  _toc.yml  changelog.rst  conf.py.in  develop.rst  glossary.rst  index.md  index.rst  test.rst
documentation/_templates/: api.html
documentation/develop/: CMakeLists.txt  environment.rst  git.rst  index.md  index.rst  release.rst
documentation/develop/example/: README.rst
documentation/develop/example/10_pathway_graph/: 05_plot_single_period.py
documentation/develop/example/ex_05_sequence_graph/: 05_plot_serial_sequence_graph.py  10_plot_diverging_sequence_graph.py  15_plot_converging_sequence_graph.py  15_plot_example_sequence_graph.py  20_plot_example_sequence_graph.py  25_plot_example_sequence_graph.py  README.rst
documentation/develop/example/ex_10_pathway_graph/: 05_plot_serial_pathway.py  05_plot_serial_pathway_graph.py  10_plot_diverging_pathway_graph.py  10_plot_diverging_pathways.py  15_plot_converging_pathway_graph.py  15_plot_example_pathway_graph.py  20_plot_example.py  20_plot_example_pathway_graph.py  25_plot_example_pathway_graph.py  README.rst
documentation/develop/example/ex_15_pathway_map/: 05_plot_serial_pathway_map.py  10_plot_diverging_pathway_map.py  15_plot_converging_pathway_map.py  15_plot_example_pathway_map.py  20_plot_example_pathway_map.py  25_plot_example_pathway_map.py  README.rst
documentation/develop/example/sequence_graph/: README.rst  plot_diverging.py  plot_example_01.py  plot_example_02.py  plot_serial.py
documentation/test/: index.rst
documentation/use/: CMakeLists.txt  generator.rst  get_started.md  get_started.rst  import_export.md  import_export.rst  index.rst  plot.md  plot.rst
documentation/use/example/: README.rst
documentation/use/example/ex_10_pathway_map/: 05_plot_serial_pathway_map_classic.py  10_plot_diverging_pathway_map_classic.py  15_plot_converging_pathway_map_classic.py  20_plot_example_pathway_map_classic.py  25_plot_example_pathway_map_classic.py  README.rst
documentation/use/example/ex_15_bar_plot/: 05_plot_serial_bar_plot.py  10_plot_diverging_bar_plot.py  15_plot_converging_bar_plot.py  20_plot_example_bar_plot.py  25_plot_example_bar_plot.py  README.rst
environment/cmake/: FindCairoSVG.cmake  FindFlet.cmake  FindPyInstaller.cmake  FindQUARTO.cmake  FindQtTools.cmake  FindQuarto.cmake  FindSPHINX.cmake  FindSed.cmake  FindSphinx.cmake
environment/configuration/: requirements-dev.txt  requirements.txt
environment/script/: create_and_verify_release.py  print_north_theme_colours.py
mockup/: schema.txt
presentation/: CMakeLists.txt
presentation/2023/: CMakeLists.txt
presentation/2023/12/05/: CMakeLists.txt  graph.qmd
presentation/2023/12/progress/: CMakeLists.txt  pathways-1.txt  presentation.qmd
presentation/2024/: CMakeLists.txt
presentation/2024/01/: CMakeLists.txt
presentation/2024/01/12/: CMakeLists.txt  presentation.qmd
presentation/2024/01/31/: CMakeLists.txt  presentation.qmd
presentation/2024/01/progress/: CMakeLists.txt  presentation.qmd
presentation/2024/03/: CMakeLists.txt
presentation/2024/03/15/: CMakeLists.txt  presentation.qmd
presentation/2024/10/: CMakeLists.txt
presentation/2024/10/24/: CMakeLists.txt  presentation.qmd
presentation/2024/11/12/: CMakeLists.txt  presentation.qmd
source/: CMakeLists.txt
source/notebook/: adaptation_pathways.ipynb  adaptation_pathways.md
source/package/adaptation_pathways/: __init__.py  action.py  action_begin.py  action_combination.py  action_conversion.py  action_end.py  actions_graph.py  alias.py  browser.py  combined_action.py  dashboard.py  generator_main.py  graph.py  intervention.py  jupyter.py  networkx.py  pathway.py  pathways_graph.py  pathways_map.py  rooted_tree.py  scenario.py  sequenced_action.py  viewer.py  window.py
source/package/adaptation_pathways/app/: README.md  __init__.py  main.py  theme.py
source/package/adaptation_pathways/cli/: __init__.py  create_logo.py  export.py  flyer_examples.py  hello_world.py  import_.py  main.py  pathway_generator.py  plot_bars.py  plot_graphs.py  plot_pathway_map.py  plot_pathways.py
source/package/adaptation_pathways/desktop/: CMakeLists.txt  __init__.py  application.py  main_window.ui  path.py
source/package/adaptation_pathways/draw/: __init__.py  layout.py
source/package/adaptation_pathways/graph/: __init__.py  actions_graph.py  colour.py  conversion.py  convert.py  coordinate.py  directed_graph.py  io.py  layout.py  multi_rooted_graph.py  pathway_graph.py  pathway_graph_layout.py  pathway_map.py  pathway_map_layout.py  pathways_graph.py  pathways_map.py  plot.py  rooted_graph.py  sequence_graph.py  sequence_graph_layout.py
source/package/adaptation_pathways/io/: __init__.py  binary.py  dataset.py  sqlite.py  text.py
source/package/adaptation_pathways/model/: action.py  comparisons.py  filter.py  metric.py  pathway.py  pathways_project.py  scenario.py
source/package/adaptation_pathways/plot/: __init__.py  alias.py  colour.py  default.py  pathway_map.py  plot.py  (+1 more)
source/package/pathways_app/: CMakeLists.txt  README.md  __init__.py  app.py  example.py  main.py  patch_index_html.py  patch_index_html.sed  pyproject.toml.in  requirements.txt  theme.py
source/script/: ap_create_logo.py  ap_export.py  ap_import.py  ap_plot_bars.py  ap_plot_graphs.py  ap_plot_pathway_map.py  flyer_examples.py  hello_world.py  pathway_generator.py  pathways_generator.py
source/test/: CMakeLists.txt  README.md  action_combination_test.py  action_test.py  intervention_test.py  pathway_test.py  run_all_tests.py
source/test/ap_test/: action_test.py  package_test.py  test_data.py
source/test/graph/: coordinate_test.py  io_test.py  layout_test.py  pathway_graph_layout_test.py  pathway_graph_test.py  pathway_map_layout_test.py  pathway_map_test.py  sequence_graph_layout_test.py  sequence_graph_test.py
(+164 files in other folders)
