[tool.isort]
lines_after_imports = 2
profile = "black"

[tool.pylint]
disable = "C0103, C0114, C0115, C0116, C0302, W0212, W0511, R0801"
extension-pkg-allow-list = "PySide6"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptation_pathways"
version = "0.0.5"
# dynamic = [
#     "version",
# ]
authors = [
    { name = "Example Author", email = "author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dash",
    "docopt",
    "jupyterlab",
    "matplotlib",
    "networkx[default]",
    "pandas",
    "plotly",
    "pyside6",
]

[project.urls]
"Homepage" = "https://todo"
"Bug Tracker" = "https://todo"

[project.scripts]
ap_plot_graphs = "adaptation_pathways.cli.plot_graphs:main"
ap_plot_pathway_map = "adaptation_pathways.cli.plot_pathway_map:main"
ap_pathway_generator = "adaptation_pathways.cli.pathway_generator:main"

[tool.hatch.build.targets.wheel]
# include = [
# ]
packages = [
    "source/package/adaptation_pathways",
]
exclude = [
    "CMakeLists.txt",
]

# [tool.hatch.version]
# path = "adaptation_pathways/version.py"
# pattern = "VERSION (?P<version>\\d+\\.\\d+\\.\\d+)\\s"
