[tool.isort]
known_ap = "adaptation_pathways"
lines_after_imports = 2
sections = "FUTURE,STDLIB,THIRDPARTY,AP,FIRSTPARTY,LOCALFOLDER"
profile = "black"

[tool.pylint]
disable = "C0103, C0114, C0115, C0116, C0302, E0401, W0212, W0511, R0801"
extension-pkg-allow-list = [
    "matplotlib",
    "PySide6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptation_pathways"
version = "0.0.9"
# dynamic = [
#     "version",
# ]
authors = [
    { name = "Example Author", email = "author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "docopt",
    "matplotlib",
    "networkx[default]",
    "pyside6",
]

[project.urls]
"Homepage" = "https://todo"
"Bug Tracker" = "https://todo"

[project.scripts]
ap_export = "adaptation_pathways.cli.export:main"
ap_import = "adaptation_pathways.cli.import_:main"
ap_pathway_generator = "adaptation_pathways.cli.pathway_generator:main"
ap_plot_graphs = "adaptation_pathways.cli.plot_graphs:main"
ap_plot_pathway_map = "adaptation_pathways.cli.plot_pathway_map:main"

[tool.hatch.build.targets.wheel]
# include = [
# ]
packages = [
    "source/package/adaptation_pathways",
]
exclude = [
    "CMakeLists.txt",
]

# [tool.hatch.version]
# path = "adaptation_pathways/version.py"
# pattern = "VERSION (?P<version>\\d+\\.\\d+\\.\\d+)\\s"
